--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest --verbose --coverage",
-    "eslint": "eslint --ext .js ./"
+    "eslint": "eslint --ext .js ./ --fix"
   },
   "repository": {
     "type": "git",
