--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,10 @@
         "jest/valid-expect": "error",
         "jest/no-test-return-statement": "off",
          "no-console": "off",
-         "quotes":"off"
+         "quotes":"off",
+         "no-useless-escape":"off",
+         "no-restricted-syntax" :"off",
+         "no-return-assign":"off"
          
   }
   
