--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "md-links",
   "version": "0.1.0",
-  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Entregables](#6-entregables)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Pistas, tips y lecturas complementarias](#8-pistas-tips-y-lecturas-complementarias)\r * [9. Checklist](#9-checklist)\r * [10. Achicando el problema](#10-achicando-el-problema)",
-  "main": "index.js",
+  "description": "Markdown file link extractor and validator",
+  "main": "md-links.js",
+  "bin": {
+    "mdrt": "./md-links-cli.js"
+  },
   "directories": {
+    "lib": "lib",
     "test": "test"
   },
   "scripts": {
@@ -14,7 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/danielamendezgandara/SCL017-md-link.git"
   },
-  "author": "",
+  "author": "Daniela Méndez Gándara",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/danielamendezgandara/SCL017-md-link/issues"
@@ -23,6 +27,7 @@
   "dependencies": {
     "eslint-plugin-jest": "^24.4.2",
     "inquirer": "^8.1.5",
+    "log-symbols": "^5.0.0",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
@@ -30,5 +35,11 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "jest": "^27.2.1"
-  }
+  },
+  "keywords": [
+    "md-links",
+    "links",
+    "extractor",
+    "validator"
+  ]
 }
